fix: mobile overflow issue

--- a/main.scss
+++ b/main.scss
@@ -18,7 +18,6 @@
 }
 
 .wrap {
-    overflow: hidden;
     display: flex;
     width: 100%;
     height: 100vh;
@@ -169,6 +168,7 @@ header {
     @include media(false, tablet) {
         width: 100%;
         height: calc(100vh - to_vw($headerH));
+        height: calc(100svh - to_vw($headerH));
         margin-top: to_vw($headerH);
     }
 }
